# used_car_prices_kaggle_s4e9

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-initial-data-explore.ipynb  02-model-autogluon.ipynb
used_car_prices_kaggle_s4e9/: dataset.py
